--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<link rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
-		<section>
+		<section id="home">
 			<header>
 				<img
 					src="images/logo-typo.svg"
@@ -23,23 +23,28 @@
 				/>
 			</header>
 			<article>
-				<h1>
-					Plongez dans l'obscurité de l'histoire des sorcières, où la
-					légende rencontre la réalité.
-				</h1>
-				<p>
-					Explorez cette exposition unique, illuminé par des
-					illustrations générées par l'intelligence artificielle.
-				</p>
-				<div>
-					<button>Réserver mon billet</button>
-					<button>Découvrir l'exposition virtuelle</button>
+				<div class="content">
+					<h1>
+						Plongez dans l'obscurité de l'histoire des sorcières, où la
+						légende rencontre la réalité.
+					</h1>
+					<p>
+						Explorez cette exposition unique, illuminé par des
+						illustrations générées par l'intelligence artificielle.
+					</p>
+					<div>
+						<button class="plain">Réserver mon billet</button>
+						<button class="bordered">Découvrir l'exposition virtuelle</button>
+					</div>
 				</div>
+				<a href="#presentation">
+					<img src="images/arrow-down.png" alt="">
+				</a>
 			</article>
-			<img src="images/home-left-tree.png" alt="" />
-			<img src="images/home-right-tree.png" alt="" />
+			<img src="images/home-left-tree.png" alt="" class="tree tree-left"/>
+			<img src="images/home-right-tree.png" alt="" class="tree tree-right"/>
 		</section>
-		<section>
+		<section id="presentation">
 			<article>
 				<div>
 					<h2>
@@ -60,7 +65,7 @@
 			<img src="images/red-illustration-background.svg" alt="" />
 			<img src="images/red-illustration-background.svg" alt="" />
 		</section>
-		<section>
+		<section id="darkness">
 			<article>
 				<h2>Parcourez les ténèbres</h2>
 				<p>
@@ -72,7 +77,7 @@
 				</p>
 			</article>
 		</section>
-		<section>
+		<section id="journey">
 			<article>
 				<div>
 					<img src="images/witch-video-illustration.png" alt="" />
@@ -91,7 +96,7 @@
 				</div>
 			</article>
 		</section>
-		<section>
+		<section id="reservation">
 			<article>
 				<div>
 					<h2>Réservez votre passage</h2>
@@ -109,7 +114,7 @@
 			</article>
 			<img src="images/trees-token.png" alt="" />
 		</section>
-		<section>
+		<section id="shop">
 			<div>
 				<div>
 					<article>
@@ -149,7 +154,7 @@
 				<img src="images/chevron-right.png" alt="" />
 			</div>
 		</section>
-		<section>
+		<section id="todo">
 			<img src="images/logo-illustration.svg" alt="" />
 			<h3>Que faire avant votre venue à l'exposition ?</h3>
 			<div>
@@ -166,7 +171,7 @@
 				</article>
 			</div>
 		</section>
-		<footer>
+		<footer id="footer">
 			<img src="images/logo-illustration.svg" alt="" />
 			<nav>
 				<ul>
