Presentation section done

--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
 						histoires de sorcellerie qui réveillent vos peurs les plus
 						profondes.
 					</p>
-
-					<img src="images/main-illustration.png" alt="" />
 				</div>
+
+				<img src="images/main-illustration.png" alt="" />
 			</article>
-			<img src="images/red-illustration-background.svg" alt="" />
-			<img src="images/red-illustration-background.svg" alt="" />
+			<img src="images/background-illustration-left.svg" alt="" class="left"/>
+			<img src="images/background-illustration-right.svg" alt="" class="right"/>
 		</section>
 		<section id="darkness">
 			<article>
