journey section done

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 						hors du commun.
 					</p>
 					<h3>Oserez-vous affronter l'obscurité ?</h3>
-					<button>Réserver mon billet</button>
+					<button class="plain">Réserver mon billet</button>
 				</div>
 				<img src="images/billets.png" alt="" />
 			</article>
