reservation section done

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 				</div>
 				<img src="images/billets.png" alt="" />
 			</article>
-			<img src="images/trees-token.png" alt="" />
+			<img src="images/trees-token.png" alt="" class="token"/>
 		</section>
 		<section id="shop">
 			<div>
