todo section done

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 			</article>
 			<img src="images/trees-token.png" alt="" class="token"/>
 		</section>
-		<section id="shop">
+		<!-- <section id="shop">
 			<div>
 				<div>
 					<article>
@@ -153,14 +153,16 @@
 				<img src="images/chevron-left.png" alt="" />
 				<img src="images/chevron-right.png" alt="" />
 			</div>
-		</section>
+		</section> -->
 		<section id="todo">
-			<img src="images/logo-illustration.svg" alt="" />
-			<h3>Que faire avant votre venue à l'exposition ?</h3>
+			<div>
+				<img src="images/logo-illustration.svg" alt="" />
+				<h3>Que faire avant votre venue à l'exposition ?</h3>
+			</div>
 			<div>
 				<article>
 					<h3>
-						Mettez-vous dans l'ambiance avec notre playlist Spotify
+						Mettez-vous dans l'ambiance<br>avec notre playlist Spotify
 					</h3>
 					<img src="images/spotify-code.png" alt="" />
 				</article>
@@ -175,10 +177,10 @@
 			<img src="images/logo-illustration.svg" alt="" />
 			<nav>
 				<ul>
-					<li><a href="">À propos de nous</a></li>
-					<li><a href="">Nous contacter</a></li>
-					<li><a href="">Mentions légales</a></li>
-					<li><a href="">Politique de confidentialité</a></li>
+					<li><a href="#">À propos de nous</a></li>
+					<li><a href="#">Nous contacter</a></li>
+					<li><a href="#">Mentions légales</a></li>
+					<li><a href="#">Politique de confidentialité</a></li>
 				</ul>
 			</nav>
 			<p>&copy; Echoes 2023</p>
