--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 			</div>
 		</section>
 		<footer id="footer">
-			<img src="images/logo-illustration.svg" alt="" />
+			<img src="images/logo-typo.svg" alt="" />
 			<nav>
 				<ul>
 					<li><a href="#">À propos de nous</a></li>
@@ -183,7 +183,7 @@
 					<li><a href="#">Politique de confidentialité</a></li>
 				</ul>
 			</nav>
-			<p>&copy; Echoes 2023</p>
+			<p>Echoes : Tales of Seffering - 2023 &copy; Designed by <a href="https://bento.me/juliefrancois" target="_blank">Julie François</a>, <a href="https://www.behance.net/ylonaoth/info" target="_blank">Ylona Oth</a> and <a href="https://www.behance.net/cassy-adacunh1" target="_blank">Cassy-Ann Da Cunha</a>, developped by <a href="https://bento.me/bourgouin-benjamin" target="_blank">Benjamin Bourgouin</a></p>
 		</footer>
 	</body>
 </html>
